Cleanup home page copy

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -91,74 +91,53 @@
             </li>
         </ul>
 
-        <h1>A Note From Derek</h1>
+        <h1>It Starts With You</h1>
         <blockquote>
-            <blockquote>
-                When a man assumes a public trust he should consider himself a public property. - Thomas Jefferson
-            </blockquote>
+            <p>
+                How well do you know your representatives?
+            </p>
 
             <p>
-                I've always believed that <strong>government is most effective when it is
-                responsive to the needs of the community it represents</strong>. At its core,
-                government is simply a community coming together to solve its
-                collective problems for the benefit of the community as a whole.
+                Do you know that they have voted consistently against women's rights?<br>
+                All three of our current delegates have consistently received a 0% rating from
+                NARAL Pro-Choice Maryland.
             </p>
+
             <p>
-                In a modern society, the sheer breadth of issues faced by
-                our community is too vast for every citizen to remain informed
-                on every issue, so we elect people from our community to serve
-                as our representatives.
+                Do you know that Mark Chang was endorsed by the homophobic organization
+                Protect Marriage Maryland? Or that Ted Sophocleus received a 0% rating
+                from Equality Maryland? Or that all three of our delegates voted against
+                SB 743 (2015) — legislation that was designed to protect LGBT rights?<br>
             </p>
+
             <p>
-                Now I don't mean to patronize you — we're all aware of the basic
-                premise of how Democracy works. But I mention it to raise an
-                important point.
+                Do you know that Ted Sophocleus is endorsed by the NRA and voted against
+                legislation to prohibit firearms on college campuses?
             </p>
+
             <p>
-                Government is only responsive to the needs of a community if
-                the people we elect — the politicians — are responsive to the
-                needs of our community as a whole. And it genuinely requires
-                an altruistic and committed individual to maintain an open dialogue
-                with their community and to represent their best interests —
-                even when their constituents are too busy with their own lives
-                to pay attention.
+                Do you know that Pam Beidle voted against guaranteed paid sick leave?
             </p>
+
             <p>
-                Over the past four years now, I have closely followed the actions
-                and voting records of our elected Democratic representatives
-                of District 32. <strong>What I've learned has shocked me.</strong>
+                <strong>No other Democratic delegation in Maryland
+                has voted with Republican majorities more frequently than the delegates
+                from District 32 — and it's not even close.</strong>
             </p>
+
             <p>
-                Our representatives, who are all members of the
-                <em>Democratic Party</em>, have not just voted for, but in many cases
-                actually <em>sponsored bills</em> to:
-                <ul>
-                    <li>Send children to jail who haven't been convicted of a crime [HB196]</li>
-                    <li>Take away a woman's right to choose [HB1312] [HB283]</li>
-                    <li>Allow people to bring handguns into Maryland [HB464]</li>
-                    <li>Allow people to purchase assault rifles [HB317]</li>
-                    <li>Increase individual campaign contributions to $6000 [HB1499]</li>
-                    <li>Give a tax break to the wealthy</li>
-                </ul>
-                They have also voted <em>against</em>:
-                <ul>
-                    <li>
-                        Guaranteed Sick Leave for employees
-                        <a href="http://mgaleg.maryland.gov/webmga/frmMain.aspx?pid=flrvotepage&tab=subject3&id=hb0580,h-0997&stab=02&ys=2016RS">[HB580]</a>
-                    </li>
-                </ul>
-                In many cases these stances were in stark contrast to the majority
-                of Democrats in the House, and aligned much more closely with
-                Republican Delegates.
+                Our delegation has consistently been on the wrong side of social and economic issues,
+                and they do not serve the needs of our community nor represent the values of our party.
             </p>
+
             <p>
-                I do not believe these positions are in line with the Democratic
-                Party or with our community as a whole. That's why I've decided
-                to submit my name to represent District 32 in the House of
-                Delegates.
+                It's time to stand up and demand change.
             </p>
+
             <p>
-                I promise to engage with and represent our whole community
+                On June 26th, when you vote in the Democratic primaries, vote for a Democrat
+                and a Progressive who will stand up for our families, for our friends,
+                and for our neighbors. Vote for Derek Kent.
             </p>
         </blockquote>
 
@@ -166,92 +145,7 @@
             <div class="header">
                 <span class="title">Donate to Our Campaign</span>
             </div>
-            <span>Let's start a revolution</span>
+            <span>Demand Change</span>
         </div>
-
-        <h1>It Starts With You</h1>
-
-        <div>
-            <p>
-                The United States is the most advanced, richest nation on the face of the Earth.
-                And Maryland is the richest state in the Union.[1]
-                Yet,
-            </p>
-
-            <cite>[1] Calculated by Median Household Income</cite>
-
-            <p>
-                Maryland legislatures recently voted to increase individual campaign
-                contribution limits from $4,000 to $6,000 for State elections.
-                Even Presidential campaigns are still limited to just $2,700.
-                That's the wrong direction to be moving after the disasterous
-                Citizen's United decision.
-                <strong>In fact, in Maryland, Campaign Contribution Limits
-                have been raising faster than the minimum wage.</strong>
-                We need to get big money out of politics and get our priorities
-                straight.
-            </p>
-
-            <p>EPA's action level for lead in drinking water is 15 ppb; however,
-            \"Rules and science are outdated. The E.P.A.’s trigger level for addressing lead in drinking water — 15 parts per billion — is not based on any health threat; rather, it reflects a calculation that water in at least nine in 10 homes susceptible to lead contamination will fall below that standard.\" (http://www.nytimes.com/2016/02/09/us/regulatory-gaps-leave-unsafe-lead-levels-in-water-nationwide.html).
-            NO AMOUNT OF LEAD IN DRINKING WATER IS CONSIDERED SAFE FOR CHILDREN.
-            https://www.epa.gov/your-drinking-water/basic-information-about-lead-drinking-water
-            \"The MCLG for lead is zero. EPA has set this level based on the best available science which shows there is no safe level of exposure to lead.\"
-            Maryland Department of Environment (MDE)
-            http://www.dsd.state.md.us/comar/comarhtml/26/26.04.01.06-2.htm
-            Maryland action level is 5ppb, sampled once every 3 years, lt 10%
-            Proposal: Lead-free schools: Set standard for schools to 0 ppb.
-            </p>
-
-            <p>The E.P.A. has compiled a list of 100 potentially risky chemicals and 12 microbes that are known or expected to be found in public water systems, but are not yet regulated.
-            </p>
-            <p>Expand regulations in Maryland</p>
-
-            <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/5tu32CCA_Ig" frameborder="0" allowfullscreen></iframe>-->
-
-            <h2>Revitalize Baltimore</h2>
-
-            <p>Baltimore's poorest neighborhoods are our neighbors. According to the Census Bureau (American Community Survey, 2012),
-            25.2% of people in Baltimore live in poverty. 36.5% of children live in poverty. 84.9% of children receive their meals
-            through the Free and Reduced Priced Meals Program. Neighborhoods in Baltimore have lower Life Expectancy rates
-            lower than North Korea and the Gaza Strip. Growing up in these neighborhoods is a virtual death sentence.
-            Those statistics alone should be enough to make it clear that we have a moral obligation to help our neighbors.
-            But it is also in our own best interest to revitalize Baltimore and improve the quality of life for its
-            residents.
-            </p>
-            <p>As Jordan Rappaport, a senior economist at the Federal Reserve Bank of Kansas City, observed:
-            \"cities and suburbs depend on each other for economic growth\" and they
-            \"grow or decline together\".
-            </p>
-
-            <p>$15 times 0 is still $0. Raising the minimum wage is important, but it's not enough. We also have to
-            bring jobs in to the area that are going to stay and help the area grow.</p>
-
-        </div>
-
-        <h1>For the People</h1>
-
-        <p>A practical idealist.</p>
-
-        <p>
-        Ted gets a 0% from NARAL Pro-Choice Maryland. A 0% from Equality Maryland. A 25% from the Maryland State Education Association. He's endorsed by the NRA.
-
-        Mark Chang was endorsed by Maryland Right to Life and Protect Marriage Maryland — conservative organizations that are homophobic and anti-women.
-
-        Maryland Right to Life has given all 3 District 32 reps a 100% rating. Only 5 other Democrats in the entire state had a rating other than 0%.
-
-        Ted voted against legislation prohibiting firearms on college campuses: http://votesmart.org/bill/votes/56027  HB 1002 (2016) - only 3 other democrats in the entire state voted with him
-
-        Mark and Ted voted against legislation that returned voting rights to felons who served their time and were released on parole: http://votesmart.org/bill/votes/55138 HB980 (2016) - only 4 other democrats in the entire state voted with them
-
-        Mark, Pam, and Ted ALL voted against legislation to allow new birth certificates for sex changes: http://votesmart.org/bill/votes/51873 SB 743 (2015) - only 1 other democrat in the entire state voted with them
-
-        Mark, Pam and Ted ALL voted against reducing mandatory minimum sentencing for drug offenses HB 121 (2015) - only 3 other democrats in the entire state voted with them
-
-        Mark and Ted both voted against legislation that authorizes people to have convictions which are no longer crimes to be expunged from their record HB 124 (2015) - only 2 other democrats in the entire state voted with them
-
-
-        Pam Beidle voted against guaranteed paid sick leave HB 580 (2016) - only 4 other democrats in the entire state voted with her
-        </p>
     </article>
 </template>
