--- a/src/app/pages/issues/issues.html
+++ b/src/app/pages/issues/issues.html
@@ -144,7 +144,7 @@
             <li>
                 <a href="/issues/religion">
                     <h2>Religious Freedom</h2>
-                    <img src="/images/issues/khanda.svg" alt="Religious Freedom" width="170" height="170">
+                    <img src="/images/issues/human.svg" alt="Religious Freedom" width="170" height="170">
                 </a>
             </li>
 
