Drop blockquote styling on home page

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -91,8 +91,8 @@
             </li>
         </ul>
 
-        <h1>It Starts With You</h1>
-        <blockquote>
+        <div class="starts-with-you">
+            <h1>It Starts With You</h1>
             <p>
                 How well do you know your representatives?
             </p>
@@ -120,7 +120,7 @@
             </p>
 
             <p>
-                <strong>No other Democratic delegation in Maryland
+                <strong>The truth is, no other Democratic delegation in Maryland
                 has voted with Republican majorities more frequently than the delegates
                 from District 32 — and it's not even close.</strong>
             </p>
@@ -135,11 +135,11 @@
             </p>
 
             <p>
-                On June 26th, when you vote in the Democratic primaries, vote for a Democrat
+                <strong>On June 26th, when you vote in the Democratic primaries, vote for a Democrat
                 and a Progressive who will stand up for our families, for our friends,
-                and for our neighbors. Vote for Derek Kent.
+                and for our neighbors. Vote for Derek Kent.</strong>
             </p>
-        </blockquote>
+        </div>
 
         <div class="donate block">
             <div class="header">
