--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -91,4 +91,13 @@
             width: 100%;
         }
     }
+
+    .starts-with-you {
+        margin-bottom: 6rem;
+
+        p {
+            font-size: 1.1em;
+            text-align: left;
+        }
+    }
 }
