Make site responsive

--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -10,16 +10,13 @@
             <a href="/issues">Vision</a>
         </li>
         <li>
-            <a href="/events">Events</a>
-        </li>
-        <li>
             <a href="/news">News</a>
         </li>
         <li>
-            <a href="/join">Join</a>
+            <a href="/map">Map</a>
         </li>
         <li>
-            <a href="/contribute">Contribute</a>
+            <a href="/join">Join</a>
         </li>
     </ul>
 </nav>
