--- a/src/app/pages/issues/ubi/ubi.scss
+++ b/src/app/pages/issues/ubi/ubi.scss
@@ -1,6 +1,10 @@
 @import 'variables';
 @import 'mixins';
 
-.issues_justice-page {
+.issues_ubi-page {
     margin-bottom: 6rem;
+
+    > .banner {
+        background-image: url('/images/banners/ubi.jpg');
+    }
 }
