--- a/src/app/pages/map/map.html
+++ b/src/app/pages/map/map.html
@@ -3,7 +3,7 @@
         <h1>District 32 Locator</h1>
 
         <form>
-            <input type="text" name="address" placeholder="Address where you're registered to vote" aria-label="Address" />
+            <input type="text" name="address" placeholder="Enter your address" aria-label="Address" />
             <input type="submit" value="Find Me" class="btn btn-blue" />
         </form>
 
