--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -5,8 +5,9 @@
     text-align: center;
 
     > .intro {
-        background-color: lightblue;
-        background-image: url('/images/home/intro-bg.jpg');
+        background-image: url('/images/banners/home.jpg');
+        margin-left: -17rem;
+        padding-left: 17rem;
     }
 
     .join {
