--- a/src/styles/mixins/responsive.scss
+++ b/src/styles/mixins/responsive.scss
@@ -18,22 +18,8 @@
     }
 }
 
-@mixin collapsed {
-    @media (max-width: 760px) {
+@mixin mobile {
+    @media (max-width: #{breakpoints(tablet)}) {
         @content;
     }
-}
-
-@mixin variable-sized-text($base-size, $grow-factor) {
-    $factor: $grow-factor * $base-size / 100;
-    $base-rems: $base-size * 1rem;
-    font-size: calc(#{$base-size * 1rem} + #{$factor * 100vw} - #{$factor * $boxed-width});
-}
-
-@mixin constrained-variable-text($base-size, $grow-factor) {
-    @media (min-width: #{$boxed-width}) {
-        font-size: #{$base-size * 1rem};
-    }
-
-    @include variable-sized-text($base-size, $grow-factor)
 }
