Include banners on mobile

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <div class="intro banner curved-bottom">
+    <div class="banner curved-bottom">
         <div class="join block">
             <if condition="!model.subscribed">
                 <form class="subscribe" key="subscribe">
