--- a/src/app/components/shell/header/header.html
+++ b/src/app/components/shell/header/header.html
@@ -25,7 +25,7 @@
                 <a href="/join" class="menu-link{page === 'join' ? ' active' : ''}">Join</a>
             </li>
             <li class="nav-item">
-                <a href="/contribute" class="btn btn-red">Contribute</a>
+                <a href="https://secure.actblue.com/contribute/page/derekkent?refcode=homepage&amount=27" class="btn btn-red" data-local="true">Contribute</a>
             </li>
         </ul>
     </nav>
