Update CTA copy

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -98,7 +98,11 @@
             </p>
 
             <p>
-                Do you know that they have voted consistently against women's rights?<br>
+                Do you know that your <a href="/map">District 32</a> State representatives
+                have voted consistently against women's rights?
+            </p>
+
+            <p>
                 All three of our current delegates have consistently received a 0% rating from
                 NARAL Pro-Choice Maryland.
             </p>
@@ -135,9 +139,19 @@
             </p>
 
             <p>
-                <strong>On June 26th, when you vote in the Democratic primaries, vote for a Democrat
-                and a Progressive who will stand up for our families, for our friends,
-                and for our neighbors. Vote for Derek Kent.</strong>
+                I will always fight for our friends, families, neighbors, and community.<br>
+                I will fight to make our government work for the people, not around them.<br>
+                I will fight for a free and open society where all children are given
+                the opportunity to realize their dreams, where our environment and future
+                is protected, and where all people are given the same respect and opportunity,
+                regardless of their race, ethnicity, gender, or sexual orientation.
+            </p>
+            <p>
+                But I can't do it alone. Only together can we bring about real change.
+            </p>
+            <p>
+                <strong>So remember to <a href="/join">join us</a>,
+                <a href="https://secure.actblue.com/contribute/page/derekkent?refcode=homepage&amount=27" data-local="true">contribute</a> if you can, and most importantly, go vote in the Democratic primaries on June 26th.</strong>
             </p>
         </div>
     </article>
