--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -58,6 +58,9 @@
         }
 
         fieldset {
+            color: color(white);
+            margin-top: 0;
+
             > legend {
                 font-size: 2.9rem;
                 margin-bottom: 0.5rem;
@@ -67,6 +70,7 @@
 
         input {
             border: 0;
+            margin-top: 1em;
         }
     }
 
@@ -86,6 +90,7 @@
             border-radius: 0.5rem;
             font-size: 1.8rem;
             height: 4.7rem;
+            margin-top: 0;
             padding: 1rem;
             width: 100%;
         }
