--- a/src/styles/components/buttons.scss
+++ b/src/styles/components/buttons.scss
@@ -32,7 +32,7 @@ button,
     touch-action: manipulation;
     user-select: none;
 
-    &:active {
+    &:not(.disabled):active {
         box-shadow: inset 0 0.19em 0.32em rgba(color(black), 0.125);
     }
 
@@ -41,11 +41,16 @@ button,
         text-decoration: none;
     }
 
-    &:active,
-    &:hover,
-    &:focus {
+    &:not(.disabled):active,
+    &:not(.disabled):hover,
+    &:not(.disabled):focus {
         background-color: color(gray, light);
     };
+
+    &.disabled {
+        cursor: not-allowed;
+        opacity: 0.6;
+    }
 }
 
 .btn-large {
@@ -73,9 +78,9 @@ button,
             }
         }
 
-        &:active,
-        &:hover,
-        &:focus {
+        &:not(.disabled):active,
+        &:not(.disabled):hover,
+        &:not(.disabled):focus {
             background-color: color($color, darker);
             color: color(white);
 
