Add gerrymandering issue

--- a/src/app/pages/issues/issues.html
+++ b/src/app/pages/issues/issues.html
@@ -107,6 +107,13 @@
             </li>
 
             <li>
+                <a href="/issues/gerrymandering">
+                    <h2>Gerrymandering</h2>
+                    <img src="/images/issues/gerrymandering.svg" alt="Gerrymandering" width="170" height="170">
+                </a>
+            </li>
+
+            <li>
                 <a href="/issues/guns">
                     <h2>Gun Control</h2>
                     <img src="/images/issues/gun.svg" alt="Gun Control" width="170" height="170">
