Change 'Joined' banner

--- a/src/app/pages/join/join.scss
+++ b/src/app/pages/join/join.scss
@@ -6,7 +6,7 @@
         background-image: url('/images/banners/get-involved.jpg');
 
         &.joined {
-            background-image: url('/images/banners/joined.jpg');
+            background-image: url('/images/banners/sitting-group.jpg');
             background-position: center bottom;
         }
     }
