--- a/src/app/pages/join/join.scss
+++ b/src/app/pages/join/join.scss
@@ -10,4 +10,11 @@
             background-position: center bottom;
         }
     }
+
+    .error {
+        color: color(red);
+        display: block;
+        font-size: 1.2em;
+        margin-top: 1em;
+    }
 }
