--- a/src/styles/components/pages.scss
+++ b/src/styles/components/pages.scss
@@ -21,4 +21,11 @@
         display: block;
         margin: 0 auto;
     }
+
+    .back-to-issues {
+        display: block;
+        font-size: 1.5em;
+        margin: 3rem auto 0;
+        text-align: center;
+    }
 }
