Add collective issue pages

--- a/src/app/pages/issues/children/children.scss
+++ b/src/app/pages/issues/children/children.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 @import 'mixins';
 
-.issues_wages-page {
+.issues_children-page {
     margin-bottom: 6rem;
     text-align: center;
 
