--- a/src/app/pages/issues/equality/equality.scss
+++ b/src/app/pages/issues/equality/equality.scss
@@ -3,6 +3,7 @@
 
 .issues_equality-page {
     margin-bottom: 6rem;
+    text-align: center;
 
     > .banner {
         background-image: url('/images/banners/bench.jpg');
