--- a/src/app/pages/issues/wages/wages.html
+++ b/src/app/pages/issues/wages/wages.html
@@ -1,10 +1,29 @@
 <template args="model">
     <div class="banner curved-bottom"></div>
     <article>
-        <h1>Wages</h1>
+        <h1>Living Wages</h1>
 
-        <p>
-            Coming Soon...
-        </p>
+        <ul class="issue-blocks">
+            <li>
+                <a href="/issues/ubi">
+                    <h2>End Poverty</h2>
+                    <img src="/images/issues/icons/star.svg" alt="End poverty in America in our lifetime" width="170" height="170">
+                </a>
+            </li>
+
+            <li>
+                <a href="/issues/minimum-wage">
+                    <h2>Minimum Wage</h2>
+                    <img src="/images/issues/icons/dollar.svg" alt="Minimum Wage" width="170" height="170">
+                </a>
+            </li>
+
+            <li>
+                <a href="/issues/taxes">
+                    <h2>Taxes</h2>
+                    <img src="/images/issues/icons/bank.svg" alt="Taxes" width="170" height="170">
+                </a>
+            </li>
+        </ul>
     </article>
 </template>
