--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -49,7 +49,7 @@
 
         <ul class="vision-list issue-blocks">
             <li>
-                <a href="/issues/opengov">
+                <a href="/issues/government">
                     <h2>Make Government Work for Us</h2>
                     <img src="/images/issues/icons/opengov.svg" alt="Make Government work for us" width="150" height="150">
                 </a>
@@ -70,9 +70,9 @@
             </li>
 
             <li>
-                <a href="/issues/education">
+                <a href="/issues/children">
                     <h2>Give Our Children a Brighter Future</h2>
-                    <img src="/images/issues/icons/education.svg" alt="Improve our children's education" width="150" height="150">
+                    <img src="/images/issues/icons/education.svg" alt="Improve our children's education and care" width="150" height="150">
                 </a>
             </li>
 
@@ -84,7 +84,7 @@
             </li>
 
             <li>
-                <a href="/issues/environment">
+                <a href="/issues/environmental">
                     <h2>Protect Our Environment</h2>
                     <img src="/images/issues/icons/nature.svg" alt="Protect Our Environment" width="150" height="150">
                 </a>
