--- a/src/app/pages/issues/equality/equality.html
+++ b/src/app/pages/issues/equality/equality.html
@@ -3,8 +3,27 @@
     <article>
         <h1>Equality</h1>
 
-        <p>
-            Coming Soon...
-        </p>
+        <ul class="issue-blocks">
+            <li>
+                <a href="/issues/lgbt">
+                    <h2>LGBT Rights</h2>
+                    <img src="/images/issues/icons/rainbow.svg" alt="LGBT Rights" width="170" height="170">
+                </a>
+            </li>
+
+            <li>
+                <a href="/issues/women">
+                    <h2>Women's Rights</h2>
+                    <img src="/images/issues/icons/venus.svg" alt="Women's Rights" width="170" height="170">
+                </a>
+            </li>
+
+            <li>
+                <a href="/issues/healthcare">
+                    <h2>Universal Healthcare</h2>
+                    <img src="/images/issues/icons/healthcare.svg" alt="Recognize Healthcare as a Universal Right" width="170" height="170">
+                </a>
+            </li>
+        </ul>
     </article>
 </template>
