--- a/src/app/pages/issues/government/government.scss
+++ b/src/app/pages/issues/government/government.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 @import 'mixins';
 
-.issues_wages-page {
+.issues_government-page {
     margin-bottom: 6rem;
     text-align: center;
 
