--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -4,23 +4,39 @@
         <h1>Meet Derek</h1>
 
         <p>
-            Derek Kent is a husband, father, veteran, engineer, and progressive leader who has been fighting for people's economic and civil rights his entire adult life.
+            Derek Kent is a husband, father, veteran, engineer, and progressive leader who has been
+            fighting for people's economic and civil rights his entire adult life.
         </p>
 
         <p>
-            Derek and his wife Phaby have settled their roots her in Maryland for the better part of the last decade, but have national and international experience confronting the challenges we face as a community — strengthening public education for all children, promoting healthy and sustainable growth, making our economy work for everyone, and advancing social justice.
+            Derek and his wife Phaby have settled their roots here in Maryland for the better part of the
+            last decade, but have national and international experience confronting the challenges we face
+            as a community — strengthening public education for all children, promoting healthy and
+            sustainable growth, making our economy work for everyone, and advancing social justice.
         </p>
 
         <p>
-            Derek is a self-taught Software Engineer, and has been working with the non-profit OpenStax organization for the past 5 years to help bring high-quality, free educational materials to K-12 and College students.
+            Derek is a self-taught Software Engineer. He spent almost 5 years working with the non-profit
+            organization OpenStax to help bring high-quality, free education materials to K-12 schools
+            and universities. He now works on projects for US Cyber Command, helping protect our critical
+            national infrastructure.
         </p>
 
         <p>
-            In the aftermath of 9/11, Derek suspended his college education to enlist in the US Army. He served honorably in Kuwait and Iraq as a solider, even while speaking out against the war in his capacity as a private citizen. He later attended the United States Military Academy at West Point and Syracuse University and holds a degree in International Relations and Chinese Language.
+            Derek also sits on the Executive Board for District 32 Democrats.
         </p>
 
         <p>
-            Derek has lived abroad in Germany, Taiwan, and China and worked for the US Department of State and for Senator Gillibrand. He is conversant in Mandarin Chinese and can read and write both Simplified and Traditional Chinese.
+            In the aftermath of 9/11, Derek suspended his college education to enlist in the US Army.
+            He served honorably in Kuwait and Iraq as a solider, even while speaking out against
+            the war in his capacity as a private citizen. He later attended the United States Military
+            Academy at West Point and Syracuse University and holds a degree in International Relations
+            and Chinese Language.
+        </p>
+
+        <p>
+            Derek has lived abroad in Germany, Taiwan, and China and also worked for the US Department
+            of State and for Senator Gillibrand. He is also conversant in Mandarin Chinese.
         </p>
     </article>
 </template>
