Add copy to Modern Elections page

--- a/src/app/pages/issues/elections/elections.html
+++ b/src/app/pages/issues/elections/elections.html
@@ -3,16 +3,93 @@
     <article>
         <h1>Modern Elections</h1>
 
-        <p>One person, one vote. It's one of the central tenets of our Democracy. </p>
+        <blockquote>
+            No individual raindrop ever considers itself responsible for the flood.<br>
+            — Unknown
+        </blockquote>
 
         <h2>Automatic Voter Registration</h2>
 
+        <p>
+            Since 2015, five States have already enacted automatic voter registration for
+            all citizens who interact with a government agency — unless they decline — and
+            29 States plus the District of Columbia have recently considered such measures.
+        </p>
+
+        <p>
+            Here in Maryland, the Senate killed an automatic voter registration bill in 2016,
+            but we should continue to support the Universal Voter Registration Act proposed
+            by Senator Roger Manno, or similar legislation.
+        </p>
+
+        <p>
+            Every citizen has a right to vote, and government should continue to work
+            to ensure that right.
+        </p>
+
+        <h2>Election Day Off</h2>
+
+        <p>
+            Election Day is already a State Holiday in Maryland, although you'd be forgiven for not
+            knowing — few companies give employees any time off, let alone the entire day, to
+            exercise their Constitutional Right to participate in our elections.
+        </p>
+
+        <p>
+            Employers should be required to give workers time off to vote, and employees should be
+            paid if they have to vote during their normal working hours. As compensation,
+            employers should be able to claim such wages as a tax write-off.
+        </p>
+
         <h2>Open Primaries</h2>
+
+        <p>
+            Voters should be free to support any candidate they choose, regardless of how
+            they may be registered.
+        </p>
 
         <h2>Blockchain Voting</h2>
 
+        <p>
+            The <a href="http://arstechnica.com/information-technology/2016/11/what-is-blockchain/">blockchain</a>
+            has been exploding in popularity since the emergence of BitCoin in 2009. At its core,
+            a blockchain is a ledger of records that is cryptographically validated as a chain going back
+            in time, allowing anyone and everyone to maintain a copy and ensure its accuracy.
+        </p>
+
+        <p>
+            Blockchains are so secure, they are now being <a href="http://www.nytimes.com/2016/10/12/business/dealbook/central-banks-consider-bitcoins-technology-if-not-bitcoin.html">adopted by central banks around the world</a>, and have recently <a href="https://bitcoinmagazine.com/articles/european-parliament-document-suggests-future-of-democracy-linked-to-blockchain-enabled-e-voting-1475701523">gained the support of the European Parliament</a> for use in elections.
+        </p>
+
+        <p>
+            Blockchains offer the possibility of truly secure and transparent voting over the Internet,
+            eliminating long voting lines while simultaneously allowing anyone to verify the veracity of
+            election results.
+        </p>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/CUH7pJjoWrY" frameborder="0" allowfullscreen></iframe>
+
+        <p>
+            As one of the wealthiest and most technologically advanced States in the Union, Maryland should be
+            at the forefront of exploring the possibilities of blockchain voting.
+        </p>
+
         <h2>Vote By Mail</h2>
 
-        <h2>Election Day Off</h2>
+        <p>
+            In Maryland, anyone registered to vote can apply for an absentee ballot; however, in practice
+            most voters are unaware of this right.
+        </p>
+
+        <p>
+            We can do better — absentee ballots should be mailed to all voters prior to the election
+            to give everyone the choice of submitting an absentee ballot.
+        </p>
+
+        <p>
+            Several States already perform <a href="http://www.ncsl.org/research/elections-and-campaigns/all-mail-elections.aspx">all-mail elections</a>, and Maryland already sends a fake
+            ballot to registered voters in advance. Sending a real ballot instead would require little
+            effort, but have a huge impact on voter participation.
+        </p>
     </article>
 </template>
