--- a/src/app/pages/issues/elections/elections.scss
+++ b/src/app/pages/issues/elections/elections.scss
@@ -4,6 +4,10 @@
 .issues_elections-page {
     margin-bottom: 6rem;
 
+    blockquote {
+        text-align: center;
+    }
+
     > .banner {
         background-image: url('/images/banners/modern-elections.jpg');
         background-position: center top;
